full revamp of gatling and polish the implementation revamp the gatling benchmark and run it in docker to eliminate TCP port limit on Mac fully dockerize the whole project